# GlassEye-Renderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Init.bat  Init.sh  README.md
Assets/Shaders/: compile.bat  frag.spv  shader.vert  vert.spv
CMakeResources/: EngineInclude.cmake
GlassEyeEngine/: CMakeLists.txt
GlassEyeEngine/Asset/inc/: Asset.h  AssetImporter.h  AssetManager.h  AssetMetadata.h  AssetRegistry.h  AssetSerializer.h  AssetType.h
GlassEyeEngine/Asset/src/: Asset.cpp  AssetImporter.cpp  AssetManager.cpp  AssetManager.inl  AssetSerializer.cpp
GlassEyeEngine/Core/inc/: Engine.h  Engine.inl  Event.h  KeyCodes.h  Singleton.h
GlassEyeEngine/Core/inc/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
GlassEyeEngine/Core/src/: ApplicationEvent.cpp  Engine.cpp  Event.cpp  main.cpp
GlassEyeEngine/Gameplay/inc/: App.h
GlassEyeEngine/Gameplay/src/: App.cpp
GlassEyeEngine/Graphics/inc/: Utils.h  Window.h
GlassEyeEngine/Graphics/inc/Vulkan/: VulkanContext.h  VulkanDepthBuffer.h  VulkanLogicalDevice.h  VulkanPhysicalDevice.h  VulkanShaderAsset.h  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUtility.h
GlassEyeEngine/Graphics/src/: Utils.cpp  Window.cpp
GlassEyeEngine/Graphics/src/Vulkan/: VulkanContext.cpp  VulkanDepthBuffer.cpp  VulkanLogicalDevice.cpp  VulkanPhysicalDevice.cpp  VulkanShaderAsset.cpp  VulkanSwapChain.cpp  VulkanUtility.cpp
GlassEyeEngine/Platform/inc/: Platform.h  PlatformWindows.h  WindowsWindow.h
GlassEyeEngine/Platform/src/: WindowsFileSystem.cpp  WindowsWindow.cpp
GlassEyeEngine/PrecompiledHeader/: EnginePCH.h  SystemIncludes.h  ThirdPartyIncludes.h  Types.h
GlassEyeEngine/Utils/inc/: FileSystem.h  Logger.h  Project.h
GlassEyeEngine/Utils/src/: DefineExternalHeader.cpp  FileSystem.cpp  Logger.cpp  Project.cpp
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/Gameplay/inc/: HelloTriangleApplication.h  SandboxGame.cpp  SandboxGame.h
Sandbox/Gameplay/src/: HelloTriangleApplication.cpp
Source/src/: Logger.h  importedLibs.cpp  main.cpp  stdafx.h
